deployment/aks/portal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal-deployment
  labels:
    app: portal
spec:
  replicas: 2
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: portal
  template:
    metadata:
      labels:
        app: portal
    spec:
      containers:
        - name: portal
          image: mental001/socialnetwork.portal:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "256Mi"
              cpu: "300m"
          volumeMounts:
            - mountPath: /https
              name: portal-ssl-certificate
      volumes:
        - name: portal-ssl-certificate
          secret:
            secretName: portal-ssl-certificate
            defaultMode: 0444
---
apiVersion: v1
kind: Service
metadata:
  name: portal-service
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-resource-group: SocialNetwork
    service.beta.kubernetes.io/azure-dns-label-name: socialnetwork
spec:
  type: LoadBalancer
  selector:
    app: portal
  ports:
    - name: http
      protocol: TCP
      port: 80
    - name: https
      protocol: TCP
      port: 443
