deployment/aks/profile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile-deployment
  labels:
    app: profile
spec:
  replicas: 2
  selector:
    matchLabels:
      app: profile
  template:
    metadata:
      labels:
        app: profile
    spec:
      containers:
        - name: profile
          image: mental001/socialnetwork.profile.api:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 80
          resources:
            limits:
              memory: "256Mi"
              cpu: "300m"
---
apiVersion: v1
kind: Service
metadata:
  name: profile-service
spec:
  type: ClusterIP
  selector:
    app: profile
  ports:
    - name: http
      protocol: TCP
      port: 80
